Sem5/ltfc-lab/lab-8/parser.output
Terminals which are not used

   COMMA
   LPAREN
   RPAREN


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt stmt_list
    3          | /* empty */

    4 stmt: load_stmt
    5     | save_stmt
    6     | replace_stmt
    7     | print_stmt
    8     | delete_stmt
    9     | count_stmt
   10     | append_stmt
   11     | if_stmt
   12     | expr_stmt

   13 load_stmt: LOAD STRING opt_into_id

   14 save_stmt: SAVE STRING opt_into_id

   15 opt_into_id: INTO ID
   16            | /* empty */

   17 replace_stmt: REPLACE STRING TO STRING

   18 print_stmt: PRINT STRING
   19           | PRINT ID

   20 delete_stmt: DELETE FROM ID opt_where

   21 count_stmt: COUNT FROM ID opt_where

   22 append_stmt: APPEND STRING INTO ID

   23 opt_where: WHERE cond
   24          | /* empty */

   25 if_stmt: IF cond THEN stmt_list ENDIF

   26 expr_stmt: ID ASSIGN expr

   27 expr: term
   28     | expr PLUS term

   29 term: ID
   30     | NUMBER
   31     | STRING

   32 cond: ID WHEREOP STRING
   33     | ID EQ NUMBER
   34     | ID NEQ NUMBER

   35 WHEREOP: EQUALS
   36        | CONTAINS
   37        | STARTSWITH
   38        | ENDSWITH


Terminals, with rules where they appear

$end (0) 0
error (256)
LOAD (258) 13
SAVE (259) 14
REPLACE (260) 17
PRINT (261) 18 19
DELETE (262) 20
COUNT (263) 21
APPEND (264) 22
IF (265) 25
THEN (266) 25
ENDIF (267) 25
INTO (268) 15 22
TO (269) 17
FROM (270) 20 21
WHERE (271) 23
EQUALS (272) 35
CONTAINS (273) 36
STARTSWITH (274) 37
ENDSWITH (275) 38
ASSIGN (276) 26
EQ (277) 33
NEQ (278) 34
PLUS (279) 28
COMMA (280)
LPAREN (281)
RPAREN (282)
STRING (283) 13 14 17 18 22 31 32
ID (284) 15 19 20 21 22 26 29 32 33 34
NUMBER (285) 30 33 34


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
stmt_list (33)
    on left: 2 3, on right: 1 2 25
stmt (34)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2
load_stmt (35)
    on left: 13, on right: 4
save_stmt (36)
    on left: 14, on right: 5
opt_into_id (37)
    on left: 15 16, on right: 13 14
replace_stmt (38)
    on left: 17, on right: 6
print_stmt (39)
    on left: 18 19, on right: 7
delete_stmt (40)
    on left: 20, on right: 8
count_stmt (41)
    on left: 21, on right: 9
append_stmt (42)
    on left: 22, on right: 10
opt_where (43)
    on left: 23 24, on right: 20 21
if_stmt (44)
    on left: 25, on right: 11
expr_stmt (45)
    on left: 26, on right: 12
expr (46)
    on left: 27 28, on right: 26 28
term (47)
    on left: 29 30 31, on right: 27 28
cond (48)
    on left: 32 33 34, on right: 23 25
WHEREOP (49)
    on left: 35 36 37 38, on right: 32


state 0

    0 $accept: . program $end

    LOAD     shift, and go to state 1
    SAVE     shift, and go to state 2
    REPLACE  shift, and go to state 3
    PRINT    shift, and go to state 4
    DELETE   shift, and go to state 5
    COUNT    shift, and go to state 6
    APPEND   shift, and go to state 7
    IF       shift, and go to state 8
    ID       shift, and go to state 9

    $default  reduce using rule 3 (stmt_list)

    program       go to state 10
    stmt_list     go to state 11
    stmt          go to state 12
    load_stmt     go to state 13
    save_stmt     go to state 14
    replace_stmt  go to state 15
    print_stmt    go to state 16
    delete_stmt   go to state 17
    count_stmt    go to state 18
    append_stmt   go to state 19
    if_stmt       go to state 20
    expr_stmt     go to state 21


state 1

   13 load_stmt: LOAD . STRING opt_into_id

    STRING  shift, and go to state 22


state 2

   14 save_stmt: SAVE . STRING opt_into_id

    STRING  shift, and go to state 23


state 3

   17 replace_stmt: REPLACE . STRING TO STRING

    STRING  shift, and go to state 24


state 4

   18 print_stmt: PRINT . STRING
   19           | PRINT . ID

    STRING  shift, and go to state 25
    ID      shift, and go to state 26


state 5

   20 delete_stmt: DELETE . FROM ID opt_where

    FROM  shift, and go to state 27


state 6

   21 count_stmt: COUNT . FROM ID opt_where

    FROM  shift, and go to state 28


state 7

   22 append_stmt: APPEND . STRING INTO ID

    STRING  shift, and go to state 29


state 8

   25 if_stmt: IF . cond THEN stmt_list ENDIF

    ID  shift, and go to state 30

    cond  go to state 31


state 9

   26 expr_stmt: ID . ASSIGN expr

    ASSIGN  shift, and go to state 32


state 10

    0 $accept: program . $end

    $end  shift, and go to state 33


state 11

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


state 12

    2 stmt_list: stmt . stmt_list

    LOAD     shift, and go to state 1
    SAVE     shift, and go to state 2
    REPLACE  shift, and go to state 3
    PRINT    shift, and go to state 4
    DELETE   shift, and go to state 5
    COUNT    shift, and go to state 6
    APPEND   shift, and go to state 7
    IF       shift, and go to state 8
    ID       shift, and go to state 9

    $default  reduce using rule 3 (stmt_list)

    stmt_list     go to state 34
    stmt          go to state 12
    load_stmt     go to state 13
    save_stmt     go to state 14
    replace_stmt  go to state 15
    print_stmt    go to state 16
    delete_stmt   go to state 17
    count_stmt    go to state 18
    append_stmt   go to state 19
    if_stmt       go to state 20
    expr_stmt     go to state 21


state 13

    4 stmt: load_stmt .

    $default  reduce using rule 4 (stmt)


state 14

    5 stmt: save_stmt .

    $default  reduce using rule 5 (stmt)


state 15

    6 stmt: replace_stmt .

    $default  reduce using rule 6 (stmt)


state 16

    7 stmt: print_stmt .

    $default  reduce using rule 7 (stmt)


state 17

    8 stmt: delete_stmt .

    $default  reduce using rule 8 (stmt)


state 18

    9 stmt: count_stmt .

    $default  reduce using rule 9 (stmt)


state 19

   10 stmt: append_stmt .

    $default  reduce using rule 10 (stmt)


state 20

   11 stmt: if_stmt .

    $default  reduce using rule 11 (stmt)


state 21

   12 stmt: expr_stmt .

    $default  reduce using rule 12 (stmt)


state 22

   13 load_stmt: LOAD STRING . opt_into_id

    INTO  shift, and go to state 35

    $default  reduce using rule 16 (opt_into_id)

    opt_into_id  go to state 36


state 23

   14 save_stmt: SAVE STRING . opt_into_id

    INTO  shift, and go to state 35

    $default  reduce using rule 16 (opt_into_id)

    opt_into_id  go to state 37


state 24

   17 replace_stmt: REPLACE STRING . TO STRING

    TO  shift, and go to state 38


state 25

   18 print_stmt: PRINT STRING .

    $default  reduce using rule 18 (print_stmt)


state 26

   19 print_stmt: PRINT ID .

    $default  reduce using rule 19 (print_stmt)


state 27

   20 delete_stmt: DELETE FROM . ID opt_where

    ID  shift, and go to state 39


state 28

   21 count_stmt: COUNT FROM . ID opt_where

    ID  shift, and go to state 40


state 29

   22 append_stmt: APPEND STRING . INTO ID

    INTO  shift, and go to state 41


state 30

   32 cond: ID . WHEREOP STRING
   33     | ID . EQ NUMBER
   34     | ID . NEQ NUMBER

    EQUALS      shift, and go to state 42
    CONTAINS    shift, and go to state 43
    STARTSWITH  shift, and go to state 44
    ENDSWITH    shift, and go to state 45
    EQ          shift, and go to state 46
    NEQ         shift, and go to state 47

    WHEREOP  go to state 48


state 31

   25 if_stmt: IF cond . THEN stmt_list ENDIF

    THEN  shift, and go to state 49


state 32

   26 expr_stmt: ID ASSIGN . expr

    STRING  shift, and go to state 50
    ID      shift, and go to state 51
    NUMBER  shift, and go to state 52

    expr  go to state 53
    term  go to state 54


state 33

    0 $accept: program $end .

    $default  accept


state 34

    2 stmt_list: stmt stmt_list .

    $default  reduce using rule 2 (stmt_list)


state 35

   15 opt_into_id: INTO . ID

    ID  shift, and go to state 55


state 36

   13 load_stmt: LOAD STRING opt_into_id .

    $default  reduce using rule 13 (load_stmt)


state 37

   14 save_stmt: SAVE STRING opt_into_id .

    $default  reduce using rule 14 (save_stmt)


state 38

   17 replace_stmt: REPLACE STRING TO . STRING

    STRING  shift, and go to state 56


state 39

   20 delete_stmt: DELETE FROM ID . opt_where

    WHERE  shift, and go to state 57

    $default  reduce using rule 24 (opt_where)

    opt_where  go to state 58


state 40

   21 count_stmt: COUNT FROM ID . opt_where

    WHERE  shift, and go to state 57

    $default  reduce using rule 24 (opt_where)

    opt_where  go to state 59


state 41

   22 append_stmt: APPEND STRING INTO . ID

    ID  shift, and go to state 60


state 42

   35 WHEREOP: EQUALS .

    $default  reduce using rule 35 (WHEREOP)


state 43

   36 WHEREOP: CONTAINS .

    $default  reduce using rule 36 (WHEREOP)


state 44

   37 WHEREOP: STARTSWITH .

    $default  reduce using rule 37 (WHEREOP)


state 45

   38 WHEREOP: ENDSWITH .

    $default  reduce using rule 38 (WHEREOP)


state 46

   33 cond: ID EQ . NUMBER

    NUMBER  shift, and go to state 61


state 47

   34 cond: ID NEQ . NUMBER

    NUMBER  shift, and go to state 62


state 48

   32 cond: ID WHEREOP . STRING

    STRING  shift, and go to state 63


state 49

   25 if_stmt: IF cond THEN . stmt_list ENDIF

    LOAD     shift, and go to state 1
    SAVE     shift, and go to state 2
    REPLACE  shift, and go to state 3
    PRINT    shift, and go to state 4
    DELETE   shift, and go to state 5
    COUNT    shift, and go to state 6
    APPEND   shift, and go to state 7
    IF       shift, and go to state 8
    ID       shift, and go to state 9

    $default  reduce using rule 3 (stmt_list)

    stmt_list     go to state 64
    stmt          go to state 12
    load_stmt     go to state 13
    save_stmt     go to state 14
    replace_stmt  go to state 15
    print_stmt    go to state 16
    delete_stmt   go to state 17
    count_stmt    go to state 18
    append_stmt   go to state 19
    if_stmt       go to state 20
    expr_stmt     go to state 21


state 50

   31 term: STRING .

    $default  reduce using rule 31 (term)


state 51

   29 term: ID .

    $default  reduce using rule 29 (term)


state 52

   30 term: NUMBER .

    $default  reduce using rule 30 (term)


state 53

   26 expr_stmt: ID ASSIGN expr .
   28 expr: expr . PLUS term

    PLUS  shift, and go to state 65

    $default  reduce using rule 26 (expr_stmt)


state 54

   27 expr: term .

    $default  reduce using rule 27 (expr)


state 55

   15 opt_into_id: INTO ID .

    $default  reduce using rule 15 (opt_into_id)


state 56

   17 replace_stmt: REPLACE STRING TO STRING .

    $default  reduce using rule 17 (replace_stmt)


state 57

   23 opt_where: WHERE . cond

    ID  shift, and go to state 30

    cond  go to state 66


state 58

   20 delete_stmt: DELETE FROM ID opt_where .

    $default  reduce using rule 20 (delete_stmt)


state 59

   21 count_stmt: COUNT FROM ID opt_where .

    $default  reduce using rule 21 (count_stmt)


state 60

   22 append_stmt: APPEND STRING INTO ID .

    $default  reduce using rule 22 (append_stmt)


state 61

   33 cond: ID EQ NUMBER .

    $default  reduce using rule 33 (cond)


state 62

   34 cond: ID NEQ NUMBER .

    $default  reduce using rule 34 (cond)


state 63

   32 cond: ID WHEREOP STRING .

    $default  reduce using rule 32 (cond)


state 64

   25 if_stmt: IF cond THEN stmt_list . ENDIF

    ENDIF  shift, and go to state 67


state 65

   28 expr: expr PLUS . term

    STRING  shift, and go to state 50
    ID      shift, and go to state 51
    NUMBER  shift, and go to state 52

    term  go to state 68


state 66

   23 opt_where: WHERE cond .

    $default  reduce using rule 23 (opt_where)


state 67

   25 if_stmt: IF cond THEN stmt_list ENDIF .

    $default  reduce using rule 25 (if_stmt)


state 68

   28 expr: expr PLUS term .

    $default  reduce using rule 28 (expr)
